[package]
name = "bingo-card"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
levenshtein = "1.0.5"
rand = "0.9.2"
rust_xlsxwriter = { version = "0.90.1", features = [] }
#rust_xlsxwriter = { version = "0.90.1", features = ["no-md5"] }

